--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </header>
         <!-- sección home -->
         <section class="container" id="home">
-            <h1></h1>
+            <h1>Los mejores</h1>
         </section>
     </div>
 
