--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
         <!-- sección home -->
         <section class="container" id="home">
             <h1>Los mejores</h1>
+            <a href="https://wa.me/3234098518" target="_blank" rel="noopener noreferrer" class="btn btn-danger">Compra tu libro</a>
+            <p>
+                Promociones de Halloween en todos los titulos de terror
+            </p>
         </section>
     </div>
 
