--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,8 +21,9 @@
     <!-- kit de fontawesome para iconos -->
     <script src="https://kit.fontawesome.com/952509c1de.js" crossorigin="anonymous"></script>
 
-    
+
 </head>
+
 <body>
     <!-- encabazado global -->
     <div class="home-wrapper">
@@ -38,9 +40,10 @@
                     <a href="#categoria">categoria</a>
                     <a href="#contacto">contacto</a>
                     <!-- enlaces externos -->
-                    <a href="https://librerianacional.com/" target="_blank" rel="noopener noreferrer">Librería Nacional</a>
-                   <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-                       <i class="fa fa-facebook"></i>
+                    <a href="https://librerianacional.com/" target="_blank" rel="noopener noreferrer">Librería
+                        Nacional</a>
+                    <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+                        <i class="fa fa-facebook"></i>
                     </a>
                     <a href="http://www.instagram.com" target="_blank" rel="noopener noreferrer">
                         <i class="fa fa-instagram"></i>
@@ -55,17 +58,47 @@
         <!-- sección home -->
         <section class="container" id="home">
             <h1>Los mejores</h1>
-            <a href="https://wa.me/3234098518" target="_blank" rel="noopener noreferrer" class="btn btn-danger">Compra tu libro</a>
+            <a href="https://wa.me/3234098518" target="_blank" rel="noopener noreferrer" class="btn btn-danger">Compra
+                tu libro</a>
             <p>
-                Promociones de Halloween en todos los titulos de terror
+                Promociones de Halloween en todos los titulos
             </p>
         </section>
     </div>
 
+    <!-- seccion novedades-->
+    <section class="container" id="novedades">
+        <h2>Novedades</h2>
+        <div class="box">
+            <img src="images/ux-ui.png" alt="ux-ui">
+            <h3>UX/UI</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, sint pariatur nemo totam quia fugiat
+                quam consequuntur, repudiandae earum corrupti tempore suscipit esse eos corporis rem. Est alias sit
+                molestiae.</p>
+        </div>
+
+        <div class="box">
+            <img src="images/web-design.png" alt="Web Design">
+            <h3>Web Design</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, sint pariatur nemo totam quia fugiat
+                quam consequuntur, repudiandae earum corrupti tempore suscipit esse eos corporis rem. Est alias sit
+                molestiae.</p>
+        </div>
+
+        <div class="box">
+            <img src="images/web-development.png" alt="Web Development">
+            <h3>Web Development</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate, sint pariatur nemo totam quia fugiat
+                quam consequuntur, repudiandae earum corrupti tempore suscipit esse eos corporis rem. Est alias sit
+                molestiae.</p>
+        </div>
+
+    </section>
 
 
 
-    
+
+
 
 
 
@@ -84,4 +117,5 @@
 
 
 </body>
+
 </html>
