--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <header>
             <div class="container">
                 <!-- logo con enlace -->
-                <a href="index.html"><img src="images/logo.svg" alt="logo de librería booksjg"></a>
+                <a href="index.html"><img src="images/logo.png" alt="logo de librería booksjg"></a>
                 <!-- menú de navegación -->
                 <nav>
                     <!-- enlaces con ancla de nombre class="btn btn-warning" es del bootstrap-->
@@ -198,7 +198,7 @@
 
 <!-- footer o pie de pag -->
 <footer class="cover">
-    &copy;2022. BOOKSJG Todos los derechos reservados. Diseñado: Jorge Grajales
+    &copy;2022. BOOKSJG Todos los derechos reservados. Diseñado: Julian Londoño
 </footer>
 
 
